made chenges for getting login token after registration
